crates/claptrap-core/tests/snapshots/tests__command__after_long_help.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: output
---
command cat <<'EOF_8c8cbd9f'
[1m[4mUsage:[0m [1mmyprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m
          Print help (see a summary with '-h')

Does really amazing things to great people... but be careful with -R, like, for
real, be careful with this!
EOF_8c8cbd9f
exit 0
