crates/claptrap-core/tests/snapshots/tests__command__allow_missing_positional-1.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_arg2='other'
