crates/claptrap-core/tests/snapshots/tests__command__allow_missing_positional-3.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_baz=('baz1' 'baz2' 'baz3')
