crates/claptrap-core/tests/snapshots/tests__command__allow_missing_positional-with_default.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_arg2='other'
claptrap_arg1='something'
