crates/claptrap-core/tests/snapshots/tests__command__arg.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_debug='true'
