crates/claptrap-core/tests/snapshots/tests__command__args.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_debug='true'
claptrap_config='true'
