crates/claptrap-core/tests/snapshots/tests__command__args_override_self.snap
---
source: crates/claptrap-core/tests/tests.rs
expression: "super::run(spec, args)"
---
claptrap_foo='value'
